--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
+    "iron-session": "^8.0.4",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "mysql2": "^3.15.1",
